--- a/Hardware/README
+++ b/Hardware/README
@@ -1,1 +1,2 @@
-This is the hardware parts made for the device.
+Here are the hardware parts made for the device.
+You can see here 3d printed parts used.
