--- a/Electronics/README
+++ b/Electronics/README
@@ -1,2 +1,2 @@
 Here are the schematics of the pcb used in the device. 
-* * Please consider these are not considered as finished, they still comport some errors. * *
+*Please consider these are not considered as finished, they still comport some errors.*
