--- a/Electronics/README
+++ b/Electronics/README
@@ -1,2 +1,5 @@
 Here are the schematics of the pcb used in the device. 
 Please consider these are not considered as finished, they still comport some errors.
+
+![pcb](https://github.com/Agenax/Mirrotation/blob/cd22a826fd869f17466591d5e6f2a8a1afc12f68/Electronics/pcb.jpg)
+
