--- a/Hardware/README
+++ b/Hardware/README
@@ -1,2 +1,4 @@
 Here are the hardware parts made for the device.
 You can see here 3d printed parts used.
+
+Ask for SW files if you want to edit them
