--- a/Hardware/Newcpl/README
+++ b/Hardware/Newcpl/README
@@ -1,4 +1,5 @@
 I made a more practical design for couplers. I can't publish the models yet, because they are lost one one of my computers...
 They are better than the previous one because they are magnetic. Magnets makes it easier to connect and disconnect.
 
-Here's the evolution :
+Here's the thing : 
+![image]()
